# roboto_inference

./: .gitignore  .gitmodules  CMakeLists.txt  build_deb.sh  package.xml
.github/workflows/: build-deb.yml
config/: inference.yaml  inference_amp.yaml  inference_attn_enc.yaml  inference_beyondmimic.yaml  inference_getup.yaml  inference_interrupt.yaml  robot.yaml
debian/: changelog  control  copyright  postinst  rules
include/: robot_interface.hpp
launch/: inference.launch.py
src/: CMakeLists.txt  inference_node.cpp  inference_node.hpp  obs_manager.cpp  pybind_module.cpp  robot_interface.cpp  ros_interface.cpp
src/utils/: CMakeLists.txt  close_chain_mapping.cpp  close_chain_mapping.hpp  decouple_atom01.cpp  decouple_atom01.hpp  motion_loader.cpp  motion_loader.hpp  thread_pool.hpp
